Bug 1663426 - Add a null-check to SetDocumentInternal. r=bobowen, a=RyanVM

This shouldn't generally happen, but seems it can under some circumstances and
even though I've fixed the error condition that triggers this a null-check here is harmless.

Differential Revision: https://phabricator.services.mozilla.com/D89453